--- a/LeNet-5/readme.org
+++ b/LeNet-5/readme.org
@@ -2,6 +2,17 @@
 
 This is a reimplementation of LeNet-5, and the training set is hte MNIST.
 
+* Install dependencies
+
+安装python
+
+#+BEGIN_SRC sh
+  cd src
+  conda create -n lenet5 python=3.7.6
+  conda activate lenet5
+  pip install -r ./requirements.txt
+#+END_SRC
+
 * LeNet-5 Architecture
 
 网络结构详细参数, 详情见下面的链接.
